tests/checker/diagnostics/0164_adt_recursive_list_payload_mismatch_04.ml.infer.expected
File "0164_adt_recursive_list_payload_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0164_adt_recursive_list_payload_mismatch_04 is not a valid module name.

File "0164_adt_recursive_list_payload_mismatch_04.ml", line 2, characters 39-43:
2 | let _ : int mylist_delta = Cons_delta (true, Nil_delta)
                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
